[package]
name = "rasch"
author = "sbritorodr <sbritorodr@gmail.com>"
homepage = "https://github.com/sbritorodr/rasch"
keywords = ["automatisation", "batch-processing"]
license = "LGPL-3.0"
version = "0.1.0"
edition = "2021"
about = "Easily do batch commands inside a directory"
description = "Rust CLI used to execute any terminal commands selecting multiple files inside a directory. It uses easy to remember filters and settings."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.13", features = ["derive"] }
execute = "0.2.11"
